# Retail-Analytics-RFM-Segmentation---Product-Clustering

./: Dashboard_Retail Analitycs.pbix  README.md  pyproject.toml
data/: data_dictonary.md
notebooks/: Retail.ipynb
